Update index.html for tandu-dev

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </section>
         <h4>
             Made with ❤ by
-            <a href="https://github.com/2KAbhishek/links">2KAbhishek</a>
+            <a href="https://github.com/tandu-dev/profiles">Tandu-dev</a>
         </h4>
     </main>
 </body>
